--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/AppShell.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/AppShell.xaml
@@ -4,6 +4,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:helpers="clr-namespace:WeeklyXamarin.Core.Helpers;assembly=WeeklyXamarin.Core"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:WeeklyXamarin.Mobile.Views"
     Title="WeeklyXamarin.Mobile"
@@ -44,7 +45,21 @@
                     <DataTemplate>
                         <views:ArticlesListPage>
                             <x:Arguments>
-                                <x:Boolean>True</x:Boolean>
+                                <x:String>bookmarks</x:String>
+                                <!--<x:Static DataType="{x:Type x:String}" Member="helpers:Constants.Navigation.PageMode.Bookmarks" />-->
+                            </x:Arguments>
+                        </views:ArticlesListPage>
+                    </DataTemplate>
+                </ShellContent.ContentTemplate>
+            </ShellContent>
+        </Tab>
+        <Tab Title="Search" Icon="tab_search.png">
+            <ShellContent>
+                <ShellContent.ContentTemplate>
+                    <DataTemplate>
+                        <views:ArticlesListPage>
+                            <x:Arguments>
+                                <x:String>search</x:String>
                             </x:Arguments>
                         </views:ArticlesListPage>
                     </DataTemplate>
